[gd_scene load_steps=5 format=3 uid="uid://b1blqyxjyw4lq"]

[ext_resource type="Script" path="res://scenes/inventory.gd" id="1_s4jcn"]
[ext_resource type="Texture2D" uid="uid://mcn55lfakoxf" path="res://assets/button.png" id="2_dp6gv"]
[ext_resource type="Texture2D" uid="uid://d1wp50ff0sorc" path="res://assets/box.png" id="3_8m16s"]
[ext_resource type="Texture2D" uid="uid://uxceubexn8n8" path="res://assets/choose.png" id="4_d51pj"]

[node name="Inventory" type="VBoxContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -89.0
offset_top = -37.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
script = ExtResource("1_s4jcn")

[node name="ItemBar" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Prev" type="TextureButton" parent="ItemBar"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_dp6gv")
texture_pressed = ExtResource("2_dp6gv")
texture_hover = ExtResource("2_dp6gv")
texture_disabled = ExtResource("2_dp6gv")
texture_focused = ExtResource("2_dp6gv")
flip_h = true

[node name="Use" type="TextureButton" parent="ItemBar"]
layout_mode = 2
texture_normal = ExtResource("3_8m16s")

[node name="Prop" type="Sprite2D" parent="ItemBar/Use"]
z_index = 1
position = Vector2(17, 17)

[node name="Hand" type="Sprite2D" parent="ItemBar/Use"]
z_index = 1
position = Vector2(17, 17)
texture = ExtResource("4_d51pj")

[node name="Next" type="TextureButton" parent="ItemBar"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_dp6gv")
texture_pressed = ExtResource("2_dp6gv")
texture_hover = ExtResource("2_dp6gv")
texture_disabled = ExtResource("2_dp6gv")
texture_focused = ExtResource("2_dp6gv")

[connection signal="pressed" from="ItemBar/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="ItemBar/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="ItemBar/Next" to="." method="_on_next_pressed"]
